# C-PLUS-PLUS_Android-Project

./: .gitignore  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Player.h  camera.h  game.cpp  game.h  gameUtils.cpp  gameUtils.h  input.cpp  input.h  main.cpp  platform.cpp  platform.h
app/src/main/cpp/State/: State.h
app/src/main/cpp/States/: GameState.h  MenuState.h  PauseState.h
app/src/main/cpp/States/DebugState/: DebugState.cpp  DebugState.h
app/src/main/cpp/States/GameState/: GameState.cpp  GameState.h  ParticleSystem.cpp  ParticleSystem.h
app/src/main/cpp/States/InputOverlayState/: ButtonOverlay.cpp  ButtonOverlay.h  JoystickOverlay.cpp  JoystickOverlay.h  SepJoysticknButton.cpp  SepJoysticknButton.h
app/src/main/cpp/States/MenuState/: MenuState.cpp  MenuState.h  TitleScreenState.cpp  TitleScreenState.h
app/src/main/cpp/States/MenuState/EditMenuState/: EditMenuState.cpp  EditMenuState.h
app/src/main/cpp/States/MenuState/OptionMenuState/: AudioMenuState.cpp  AudioMenuState.h  ControlMenuState.cpp  ControlMenuState.h  OptionMenuState.cpp  OptionMenuState.h
app/src/main/cpp/States/PauseState/: PauseState.cpp  PauseState.h
app/src/main/cpp/engine/: AssetManager.cpp  AssetManager.h  Engine.cpp  Engine.h  Net.h
app/src/main/cpp/level/: Fruits.cpp  Fruits.h  GroundShapeBuilder.cpp  GroundShapeBuilder.h  WallShapeBuilder.cpp  WallShapeBuilder.h
app/src/main/cpp/utils/: Camera.cpp  Camera.h  GameData.h  InputDispatcher.h  Player.h  PlayerData.cpp  PlayerData.h  SpriteCollector.cpp  SpriteCollector.h  button.h  gameMath.cpp  gameMath.h  platform.h  utils.h
app/src/main/java/org/myapp/: mySDLActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
